--- a/hw2/conf/config.yaml
+++ b/hw2/conf/config.yaml
@@ -1,12 +1,11 @@
-
-env_name: 'obstacles-ift6163-v0' # ['cheetah-ift6163-v0', 'reacher-ift6163-v0', 'obstacles-ift6163-v0' ]
+env_name: 'cheetah-ift6163-v0' # ['cheetah-ift6163-v0', 'reacher-ift6163-v0', 'obstacles-ift6163-v0' ]
 ep_len: 200
 exp_name: 'todo'
-n_iter: 10
+n_iter: 1
 ensemble_size: 3
 mpc_horizon: 10
 mpc_num_action_sequences: 1000
-mpc_action_sampling_strategy: 'cem'
+mpc_action_sampling_strategy: 'random'
 cem_iterations: 4
 cem_num_elites: 5
 cem_alpha: 1
@@ -20,8 +19,9 @@ learning_rate: 0.001
 n_layers: 2
 size: 250
 seed: 1
-no_gpu: True
+no_gpu: False
 which_gpu: 0
 video_log_freq: -1
 scalar_log_freq: 1
 save_params: False
+
