--- a/hw3/conf/config.yaml
+++ b/hw3/conf/config.yaml
@@ -18,8 +18,8 @@ seed: 1
 no_gpu: False
 which_gpu: 0
 video_log_freq: -1
-scalar_log_freq: -1
-save_params: True
+scalar_log_freq: 1
+save_params: False
 rl_alg: 'todo'
 
 computation_graph_args:
