--- a/hw4/conf/config.yaml
+++ b/hw4/conf/config.yaml
@@ -5,19 +5,19 @@ ep_len: 200
 exp_name: 'todo'
 double_q: True
 batch_size: 64 ## The min amount of experience to collect before a training update
-train_batch_size: 64 ## training batch size used for computing gradients of q function or policy
+train_batch_size: 512 ## training batch size used for computing gradients of q function or policy
 eval_batch_size: 4096 ## How much experience should be collected over the environment to evaluate the average reward of a policy
 num_agent_train_steps_per_iter: 2 ## Number of training updates after #batch_size experience is collected. 
 num_critic_updates_per_agent_update: 2 ## Number of training updates after #batch_size experience is collected.
 seed: 1
-no_gpu: False
+no_gpu: True
 which_gpu: 0
 video_log_freq: -1
 scalar_log_freq: 1
 save_params: False
 rl_alg: 'dqn' ## RL training algorithm ['dqn', 'ddpg', 'td3']
 learning_starts: 1024  ## How much initial experience to collect before training begins
-learning_freq: 0 
+learning_freq: 1
 target_update_freq: 1
 exploration_schedule: 0
 optimizer_spec:  0
@@ -29,11 +29,13 @@ size_hidden_critic: 64
 critic_learning_rate: 1e-3
 n_layers: 2
 size: 64
-learning_rate: 1e-3
+learning_rate: 1e-4
 ob_dim: 0
 ac_dim: 0
 discrete: True
 grad_norm_clipping: True
 n_iter: 1000
 polyak_avg: 0.01 ##
-td3_target_policy_noise: 0.1 ## 
+td3_target_policy_noise: 0.1 ##
+exploration_noise: 0.1 ##
+policy_update_frequency: 5
